Update CommentService